all but 2020 -- no info on 2020

--- a/2018.html
+++ b/2018.html
@@ -114,23 +114,26 @@
                 <hr> </hr>
                 <center> <p> Participants and Blog Posts </p> </center>
 
-                    <i> Eliana Lorch and Joshua Tan </i>
-                    <ul>
-                        <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
-                        <li> Associated reading:  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
-                    </ul>
+                <i>  Maru Sarazola</i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/04/dynamical_systems_and_their_st.html">  
+                        Dynamical Systems and Their Steady States </a></li>
+                    <li> Associated reading:  <a href="https://arxiv.org/abs/1704.02051"> A Compositional Framework for Reaction Networks </a>, <i>  John C. Baez and Blake S. Pollard</i> </li>
+                </ul>
 
-                    <i> Sophie Libkind and David Jaz Myers </i>
-                    <ul>
-                        <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> Logic and hypergraph categories</a></li>
-                        <li> Associated reading:  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">Graphical Regular Logic</a>, <i> Fong and Spivak </i> </li>
-                    </ul>
+                <i> Jonathan Lorand and Fabrizio Genovese </i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a></li>
+                    <li> Associated reading:  <a href="https://arxiv.org/abs/1502.00872"> Decorated Cospans </a>, <i> Brendan Fong </i> </li>
+                </ul>
 
                 <hr></hr>
                 <center> <p> Outcomes Following the Research Week </p> </center>
                 <ul>
-                    <li> <b> Publication: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
-                    <li> <b> Presentation: </b>  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/1806.10764">  Biochemical Coupling Through Emergent Conservation Laws</a>, <i>  John C. Baez, Blake S. Pollard, Jonathan Lorand, and Maru Sarazola</i> </li>
+                </ul>
+                <ul>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/1812.03601"> A recipe for black box functors </a>, <i> Brendan Fong and Maru Sarazola </i> </li>
                 </ul>
 
             </div>
@@ -145,12 +148,22 @@
                     Employ the framework of (pre-)causal categories to unite notions of causality and techniques for causal reasoning which occur in classical statistics, quantum foundations, and beyond.
                 </p>
 
-                <p> Blog posts:
+                <hr> </hr>
+                <center> <p> Participants and Blog Posts </p> </center>
+
+                <i> Joseph Moeller and Dmitry Vagner </i>
                 <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/01/a_categorical_semantics_for_ca.html">  A Categorical Semantics for Causal Structure </a></li>
+                    <li> Associated reading:  <a href="https://arxiv.org/abs/1701.04732"> A categorical semantics for causal structure </a>, <i> Aleks Kissinger and Sander Uijlen </i> </li>
                 </ul>
-                </p>
+
+
+                <i> Pablo Andres-Martinez and Sophie Raynor</i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/07/bayesian_networks.html"> Beyond Classical Bayesian Networks </a></li>
+                    <li> Associated reading:  <a href="https://iopscience.iop.org/article/10.1088/1367-2630/16/11/113043/meta"> Theory-independent limits on correlations from generalized Bayesian networks </a>, <i>   Joe Henson1, Raymond Lal, and Matthew F Pusey </i> </li>
+                </ul>
+
 
             </div>
         </div>
@@ -168,11 +181,29 @@
 
                 </p>
 
-                <p> Blog posts:
+                <hr> </hr>
+                <center> <p> Participants and Blog Posts </p> </center>
+
+                <i> Tai-Danae Bradley and Brad Theilman </i>
                 <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/03/cognition_convexity_and_catego.html"> Cognition, Convexity, and Category Theory</a></li>
+                    <li> Associated reading:  <a href="https://arxiv.org/abs/1703.08314"> Interacting Conceptual Spaces I : Grammatical Composition of Concepts </a>, <i> Joe Bolt, Bob Coecke, Fabrizio Genovese, Martha Lewis, Dan Marsden, and Robin Piedeleu </i> </li>
                 </ul>
+
+
+                <i> Sarah Griffith and Jade Master </i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/02/linguistics_using_category_the.html"> Linguistics Using Category Theory </a></li>
+                    <li> Associated reading:  <a href="https://arxiv.org/abs/1003.4394">  Mathematical Foundations for a Compositional Distributional Model of Meaning</a>, <i>  Bob Coecke, Mehrnoosh Sadrzadeh, and Stephen Clark</i> </li>
+                </ul>
+
+                <hr></hr>
+                <center> <p> Outcomes Following the Research Week </p> </center>
+                <ul>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/1811.11041"> Translating and Evolving: Towards a Model of Language Change in DisCoCat </a>, <i> Tai-Danae Bradley, Martha Lewis, Jade Master, and Brad Theilman </i> </li>
+                </ul>
+
+
             </div>
         </div>
         <div class= "col-lg-6 ">
@@ -185,11 +216,21 @@
                     Use Carboni and Walters’ bicategories of relations as a multidisciplinary algebra of open and interconnected systems.
                 </p>
 
-                <p> Blog posts:
+                <hr> </hr>
+                <center> <p> Participants and Blog Posts </p> </center>
+
+                <i> Eliana Lorch and Joshua Tan </i>
                 <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
+                    <li> Associated reading:  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
                 </ul>
+
+                <i>  Daniel Cicala and Jules Hedges </i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/02/cartesian_bicategories.html"> Cartesian Bicategories </a></li>
+                    <li> Associated reading:  <a href="https://www.sciencedirect.com/science/article/pii/0022404987901216"> Cartesian bicategories I </a>, <i>  A.Carboni, and R.F.C.Walters </i> </li>
+                </ul>
+
             </div>
         </div>
     </div>
