--- a/2020.html
+++ b/2020.html
@@ -82,7 +82,7 @@
     <h1>The Adjoint School 2020</h1>
 
     <p>
-        The 2020 Adjoint School featured projects mentored by Michael Johnson, Nina Otter, Valeria de Paiva, and Michael Shulman. It was organised by Daniel Cicala and Jules Hedges. The research week was held at Oxford in July 2019.
+        The 2020 Adjoint School featured projects mentored by Michael Johnson, Nina Otter, Valeria de Paiva, and Michael Shulman. It was organised by Carmen Constantin, Eliana Lorch, and Paolo Perrone. Due to the Covid-19 pandemic, the research week was held online "at" MIT. 
     </p>
 
 
@@ -150,6 +150,16 @@ This project is about categories of Petri nets. The goal is to update and develo
 
 Petri nets are an extremely popular model of concurrency, both in theory and in practice. They have several descriptions and variations in the literature. One of the interesting problems with Petri nets was to give a compositional theory of them. Brown and Gurr used dialectica categories to model a restricted class of Petri nets in ​[4]​. They were joined by de Paiva in ​[5]​, which generalized the previous work to nets of multiplicity greater than one. The mathematical basis was described in ​[6]​. Their nets have morphisms corresponding to simulations, which we believe are more flexible than the ones usually considered.
                 </p>
+
+                <hr> </hr>
+                <center> <p> Participants and Blog Posts </p> </center>
+
+                <i>Elena Di Lavore and Xiaoyan Li </i>
+                <ul>
+                    <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2020/07/linear_logic_flavoured_composi.html"> Linear Logic Flavoured Composition of Petri Nets</a></li>
+                    <li> Associated reading:  <a href="https://ieeexplore.ieee.org/abstract/document/113747"> A categorical linear framework for Petri nets </a>, <i>  C. Brown and  D. Gurr  </i> </li>
+                </ul>
+
 
             </div>
         </div>
