--- a/2018.html
+++ b/2018.html
@@ -129,8 +129,8 @@
                 <hr></hr>
                 <center> <p> Outcomes Following the Research Week </p> </center>
                 <ul>
-                    <li> <b> Publication: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
-                    <li> <b> Presentation: </b>  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
+                    <li><a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a>, <i> Authors </i> </li>
+                    <li>  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> Authors </i> </li>
                 </ul>
 
             </div>
