--- a/about.html
+++ b/about.html
@@ -40,9 +40,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="inclusivity.html">Inclusivity</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
             </ul>
           </div>
       </nav>
@@ -50,7 +47,7 @@
 
       <main role="main" class="container">
 
-          <h1> School Overview </h1>
+          <h1> About the Adjoint School </h1>
 
               <div class="row">
 
@@ -70,9 +67,9 @@
                           <table>
                               <tr> <td><i>November </i></td> <td> applications open</td> </tr>
                               <tr> <td><i>January </i></td> <td> participants announced</td> </tr>
-                              <tr> <td><i>February - June </i></td> <td> online seminar</td> </tr>
-                              <tr> <td><i>July X - Y </i></td> <td> in-person research week</td> </tr>
-                              <tr> <td><i>July Y - Z </i></td> <td> Applied Category Theory conference</td> </tr>
+                              <tr> <td><i>February - June </i></td> <td> Online Seminar</td> </tr>
+                              <tr> <td><i>July 5 - 9 </i></td> <td> in-person Research Week</td> </tr>
+                              <tr> <td><i>July 12 - 16 </i></td> <td> Applied Category Theory conference</td> </tr>
                           </table>
                       </center>
 
@@ -80,12 +77,14 @@
               </div>
               <hr></hr>
 
+              <h3> School Overview </h3>
+
               <div class="row">
 
                   <div class="col">
 
                       <p>
-                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components --- an online seminar that meets regularly between February and July, and an in-person research week in Cambridge, in July [insert actual date].
+                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components --- an Online Seminar that meets regularly between February and June, and an in-person Research Week in Cambridge, UK on July 5 - 9.
                       </p>
                       <p>
                           During the online seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation, study groups will meet to digest the reading in progress, and students will submit reading responses.  After the presentation, the presenters will summarize the paper into a blog post for  <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a>.
@@ -97,8 +96,97 @@
                   </div>
               </div>
               <hr> </hr>
-              <h3> Contact Us </h3>
-              <p>The organizers of the Adjoint School can be contacted at <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
+
+              <h3> Role Descriptions </h3>
+
+              <div class="row">
+                  <div class="col-12 past-proj">
+                      <h5> For Mentors </h5>
+                      <p> The Mentor for each group chooses an open research problem and leads the group during the in-person research week.</p>
+                      <p> Expectations for Mentors:</p>
+                      <ul>
+                          <li> By October 30, 2020:
+                              <ul>
+                                  <li>write a description of an open problem or research direction for working on during the Research Week</li>
+                                  <li>select two relevant papers (or equivalent) to be assigned as reading for the Online Seminar</li>
+                              </ul>
+                          </li>
+                          <li> One month prior to the Research Week (in May or June):
+                              <ul>
+                                  <li>host a preparation call with the group to prepare and clarify intentions for the week</li>
+                              </ul>
+                          </li>
+                          <li> During the Research Week:
+                              <ul>
+                                  <li>lead the group on the chosen project during the working sessions which fill most of each day</li>
+                              </ul>
+                          </li>
+                          <li> Optional:
+                              <ul>
+                                  <li>select a TA</li>
+                                  <li> lead the group to publish a paper following the Research Week</li>
+                                  <li>host regular meetings with your group before the Research Week </li>
+
+                              </ul>
+                          </li>
+                      </ul>
+
+                  </div>
+                  <div class="col-12 past-proj">
+                      <h5> For TAs </h5>
+                      <p> The TA for each group guides the groups' students during the Online Seminar and assists the Mentor during the Research Week.</p>
+                      <p> Expectations for TAs:</p>
+                      <ul>
+                          <li> During the Online Seminar:
+                              <ul>
+                                  <li>schedule and moderate 30 minute group discussions on the readings every other week (8 in total)</li>
+                                  <li> support the two pairs of students in developing their presentation and blog post by checking-in frequently, answering technical questions, and providing feedback </li>
+                                  <li> attend the presentations given by your students</li>
+
+                              </ul>
+                          </li>
+                          <li> During the Research Week:
+                              <ul>
+                                  <li>support the group during the working sessions, under the guidance of the Mentor</li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </div>
+
+                  <div class="col-12 past-proj">
+                      <h5> For Participants </h5>
+                      <p> The participants develop the skills of research during the Online Seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the Research week they work intensively on a research project under the guidance of their project’s Mentor.</p>
+                      <p> Expectations for Participants:</p>
+                      <ul>
+                          <li> During the Online Seminar:
+                              <ul>
+                              <li> Each two weeks (repeated 8 times):
+                                  <ul>
+                                      <li>read an assigned paper</li>
+                                      <li> meet for 30 minutes in small groups to digest the reading (during the first of the two weeks) </li>
+                                      <li> write a reading response to the paper (before the presentation in the second week) </li>
+                                      <li> attend a presentation on the reading (during the second of the two weeks) </li>
+                                      <li> comment on the associated blog post </li>
+                                  </ul>
+                              </li>
+                              <li> For your presentation week, with your partner:
+                                  <ul>
+                                      <li>give a 40 minute presentation on your assigned reading</li>
+                                      <li> write a blog post to be posted on the <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a></li>
+                                  </ul>
+                              </li>
+                          </ul>
+                          </li>
+                          <li> During the Research Week:
+                              <ul>
+                                  <li>be present and engaged in research with your group</li>
+                              </ul>
+                          </li>
+                      </ul>
+
+                  </div>
+
+              </div>
 
 
 </main>
