--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
             <li class="nav-item">
               <a class="nav-link" href="inclusivity.html">Inclusivity</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
           </ul>
         </div>
     </nav>
@@ -55,9 +52,8 @@
 
     <h1>The Adjoint School</h1>
 
-<<<<<<< HEAD
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-7 v-align">
             <p>The Adjoint School is an annual research school in applied category theory. It aims to
                 <ul>
                     <li> foster an open-hearted and open-minded environment where new applied category theorists develop the skills of research,</li>
@@ -66,12 +62,14 @@
                 </ul>
             </p>
         </div>
-        <div class="col-lg-4 v-align">
+        <div class="col-lg-5 v-align">
             <img src="images/ACT-actionshot.jpg" class="rounded img-fluid"></img>
         </div>
     </div>
 
     <hr></hr>
+    <h3> The Adjoint School 2021</h3>
+    <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind, and Brendan Fong. They can be contacted at <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
 
     </div>
@@ -79,22 +77,6 @@
 
 
 
-
-
-
-=======
-    <p>The Adjoint School is an annual research school in applied category theory. It's purpose is to
-        <ol>
-            <li> Build the applied category theory community,</li>
-            <li> Develop the skills to read and research in applied category theory, and</li>
-            <li> Develop domain specific knowledge in a specific area of applied category theory</li> 
-        </ol>
-        through mentorship by leading researchers in the field.
-    </p>
-    <p>
-      In 2021 it will be held in Cambridge, UK.
-    </p>
->>>>>>> c5159426d193f7d6099cf8256d341dd37ed02211
 
 
 
