--- a/2018.html
+++ b/2018.html
@@ -96,7 +96,7 @@
 
     <h2> Research Projects </h2>
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Semantics for open Petri nets and reaction networks </h5>
@@ -134,7 +134,7 @@
 
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Unification of the logic of causality </h5>
@@ -166,7 +166,7 @@
     </div>
 
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Compositional approaches to linguistics and cognition </h5>
@@ -202,7 +202,7 @@
 
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Modelling of open and interconnected systems</h5>
