--- a/2019.html
+++ b/2019.html
@@ -86,7 +86,7 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-8">
-            <img src="images/group-photo-19.jpg" class="rounded img-fluid group"></img>
+            <img src="images/2019-group.jpg" class="rounded img-fluid group"></img>
     </div>
     <div class="col-md-2">
     </div>
@@ -96,7 +96,7 @@
 
     <h2> Research Projects </h2>
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Simplifying quantum circuits using the ZX-calculus </h5>
@@ -130,7 +130,7 @@
                 </ul>
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Partial evaluations, the bar construction, and second-order stochastic dominance </h5>
@@ -169,7 +169,7 @@
     </div>
 
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5> Complexity classes, computation, and Turing categories     </h5>
@@ -196,7 +196,7 @@ Turing categories form a categorical setting for studying computability without 
 
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Traversal optics and profunctors </h5>
@@ -235,7 +235,7 @@ Turing categories form a categorical setting for studying computability without 
 
 
     <div class = "row">
-    <div class= "col-lg-6 ">
+    <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5> Formal and experimental methods to reason about dialogue and discourse using categorical models of vector spaces</h5>
@@ -272,7 +272,7 @@ Turing categories form a categorical setting for studying computability without 
             </div>
         </div>
 
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Toward a mathematical foundation for autopoiesis </h5>
