--- a/2020.html
+++ b/2020.html
@@ -94,7 +94,7 @@
 
     <h2> Research Projects </h2>
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5> Categories of Maintainable Relations</h5>
@@ -116,7 +116,7 @@
 
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5>Diagrammatic and algebraic approaches to distances between persistence modules </h5>
@@ -141,7 +141,7 @@
     </div>
 
     <div class = "row">
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5> Dialectica categories of Petri nets </h5>
@@ -167,7 +167,7 @@ Petri nets are an extremely popular model of concurrency, both in theory and in 
 
             </div>
         </div>
-        <div class= "col-lg-6 ">
+        <div class= "col-xl-6 ">
             <div class = "past-proj">
                 <center>
                     <h5> A practical type theory for symmetric monoidal categories</h5>
