--- a/2020.html
+++ b/2020.html
@@ -39,9 +39,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="inclusivity.html">Inclusivity</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
             </ul>
           </div>
       </nav><nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
@@ -129,11 +126,11 @@
                     </p>
 
                     <p>
-                        Distances between persistence modules are crucial both from a theoretical point of view — for instance, to study the stability of invariants associated to persistence modules —, as well as for applications. The standard distances used for one-parameter persistence modules are L^p distances called Wasserstein distances. For p = ∞ this distance is also called bottleneck distance, and it has arguably been the most used and studied distance for persistence modules. While the original definition is combinatorial, it has equivalent categorical and algebraic formulations called interleaving distance [2, 3].
+                        Distances between persistence modules are crucial both from a theoretical point of view — for instance, to study the stability of invariants associated to persistence modules —, as well as for applications. The standard distances used for one-parameter persistence modules are L^p distances called Wasserstein distances. For p = ∞ this distance is also called bottleneck distance, and it has arguably been the most used and studied distance for persistence modules. While the original definition is combinatorial, it has equivalent categorical and algebraic formulations called interleaving distance.
                     </p>
 
                     <p>
-                        In this project we will study different ways to give diagrammatic and algebraic formulations of Wasserstein distances for multiparameter persistence modules. Our motivation will be to investigate the stability of the invariants for multiparameter persistence modules introduced in [4], and our point of departure will be [1], in which the authors study how to generalise Wasserstein distances for p < ∞.
+                        In this project we will study different ways to give diagrammatic and algebraic formulations of Wasserstein distances for multiparameter persistence modules. Our motivation will be to investigate the stability of the invariants for multiparameter persistence modules.
                     </p>
                 </p>
 
@@ -149,11 +146,9 @@
                     <p> Mentor: <i>Valeria de Paiva</i></p>
                 </center>
                 <p>
-Dialectica categories (also called dialectica spaces) were introduced in the doctoral work of de Paiva ​[1]​, where they were used to model Gödel’s dialectica interpretation ​[2]​, as well as to provide categorical models of Girard’s linear logic ​[3]​. Since then several applications of dialectica categories, have been described. We want to have some more of them.
+Dialectica categories (also called dialectica spaces) were introduced in the doctoral work of de Paiva​, where they were used to model Gödel’s dialectica interpretation, as well as to provide categorical models of Girard’s linear logic. Since then several applications of dialectica categories, have been described. We want to have some more of them.
 
-This project is about categories of Petri nets. The goal is to update and develop the work started by Carolyn Brown and Doug Gurr in ​[4]​ and further pursued in ​[5]​ and ​[6]​. Neither of the latter two have been officially published, but they have had some impact on the concurrency community, as shown by their number of citations. It seems sensible to see whether the work on Petri nets and concurrency has proved or disproved the original suggestions.
-
-Petri nets are an extremely popular model of concurrency, both in theory and in practice. They have several descriptions and variations in the literature. One of the interesting problems with Petri nets was to give a compositional theory of them. Brown and Gurr used dialectica categories to model a restricted class of Petri nets in ​[4]​. They were joined by de Paiva in ​[5]​, which generalized the previous work to nets of multiplicity greater than one. The mathematical basis was described in ​[6]​. Their nets have morphisms corresponding to simulations, which we believe are more flexible than the ones usually considered.
+This project is about categories of Petri nets. Petri nets are an extremely popular model of concurrency, both in theory and in practice. They have several descriptions and variations in the literature. One of the interesting problems with Petri nets was to give a compositional theory of them. Brown and Gurr used dialectica categories to model a restricted class of Petri nets. They were joined by de Paiva in a subsequent paper​, which generalized the previous work to nets of multiplicity greater than one. Their nets have morphisms corresponding to simulations, which we believe are more flexible than the ones usually considered.
                 </p>
 
                 <hr> </hr>
@@ -168,7 +163,7 @@ Petri nets are an extremely popular model of concurrency, both in theory and in 
 
             </div>
         </div>
-        <div class= "col-xl-6 ">
+        <div class= "col-xl-6">
             <div class = "past-proj">
                 <center>
                     <h5> A practical type theory for symmetric monoidal categories</h5>
