--- a/about.html
+++ b/about.html
@@ -50,7 +50,6 @@
           <h1> About the Adjoint School </h1>
 
               <div class="row">
-
                   <div class = "col-md-6 v-align">
                       <p>
                           Throughout the course of the school, each participant will
@@ -74,15 +73,16 @@
                       </center>
 
                   </div>
+
+
               </div>
               <hr></hr>
 
-              <h3> School Overview </h3>
-
               <div class="row">
 
-                  <div class="col">
 
+                  <div class="col-lg-8">
+                      <h3> School Overview </h3>
                       <p>
                           Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components --- an Online Seminar that meets regularly between February and June, and an in-person Research Week in Cambridge, UK on July 5 - 9.
                       </p>
@@ -94,13 +94,24 @@
                       </p>
 
                   </div>
+                  <div class="col-lg-4 v-align">
+                      <div class="row">
+                          <div class="col-lg-12 col-sm-6">
+                                <img src="images/ACT-actionshot.jpg" class="rounded img-fluid"></img>
+                            </div>
+                            <div class="col-lg-12 col-sm-6">
+                                <img src="images/ACT-actionshot4.jpg" class="rounded img-fluid"></img>
+                            </div>
+                        </div>
+                  </div>
+
               </div>
               <hr> </hr>
 
               <h3> Role Descriptions </h3>
 
               <div class="row">
-                  <div class="col-12 past-proj">
+                    <div class="col-lg-12 past-proj">
                       <h5> For Mentors </h5>
                       <p> The Mentor for each group chooses an open research problem and leads the group during the in-person research week.</p>
                       <p> Expectations for Mentors:</p>
@@ -130,9 +141,8 @@
                               </ul>
                           </li>
                       </ul>
-
                   </div>
-                  <div class="col-12 past-proj">
+                    <div class="col-lg-12 past-proj">
                       <h5> For TAs </h5>
                       <p> The TA for each group guides the groups' students during the Online Seminar and assists the Mentor during the Research Week.</p>
                       <p> Expectations for TAs:</p>
@@ -152,8 +162,7 @@
                           </li>
                       </ul>
                   </div>
-
-                  <div class="col-12 past-proj">
+                    <div class="col-lg-12 past-proj">
                       <h5> For Participants </h5>
                       <p> The participants develop the skills of research during the Online Seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the Research week they work intensively on a research project under the guidance of their project’s Mentor.</p>
                       <p> Expectations for Participants:</p>
@@ -187,6 +196,10 @@
                   </div>
 
               </div>
+
+              <hr> </hr>
+              <h3> Contact Us </h3>
+              <p> Contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
 
 </main>
