--- a/apply.html
+++ b/apply.html
@@ -51,6 +51,21 @@
 
     <p>Applications for the 2021 Adjoint School will open in November 2020. More details will be available on this page when applications open.</p>
 
+    <hr></hr>
+    <div class="row">
+
+        <div class="col-md-8 v-align">
+            <h3> Who should apply?</h3>
+            <p>Anyone, from anywhere in the world, who is interested in applying category-theoretic methods to problems outside of pure mathematics. This is emphatically not restricted to math students, but one should be comfortable working with mathematics. Knowledge of basic category-theoretic language—the definition of monoidal category for example—is encouraged.</p>
+            <p> We will consider advanced undergraduates, PhD students, post-docs, as well as people working outside of academia. Members of minorities, and of any groups which are underrepresented in the mathematics and computer science communities, are especially encouraged to apply.</p>
+        </div>
+        <div class="col-md-4 v-align">
+            <img src="images/ACT-actionshot5.jpg" class="rounded img-fluid"></img>
+        </div>
+    </div>
+
+
+
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
