--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </p>
         </div>
         <div class="col-lg-5 v-align">
-            <img src="images/ACT-actionshot.jpg" class="rounded img-fluid"></img>
+            <img src="images/ACT-actionshot3.jpg" class="rounded img-fluid"></img>
         </div>
     </div>
 
     <hr></hr>
     <h3> The Adjoint School 2021</h3>
-    <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind, and Brendan Fong. They can be contacted at <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
+    <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind, and Brendan Fong.</p>
 
 
     </div>
