updated mentor expectations

--- a/about.html
+++ b/about.html
@@ -113,46 +113,28 @@
               <div class="row">
                     <div class="col-lg-12 past-proj">
                       <h5> For Mentors </h5>
-                      <p> The Mentor for each group chooses an open research problem and leads the group during the in-person research week.</p>
-                      <p> Expectations for Mentors:</p>
-                      <ul>
-                          <li> By October 30, 2020:
-                              <ul>
-                                  <li>write a description of an open problem or research direction for working on during the Research Week</li>
-                                  <li>select two relevant papers (or equivalent) to be assigned as reading for the Online Seminar</li>
-                              </ul>
-                          </li>
-                          <li> One month prior to the Research Week (in May or June):
-                              <ul>
-                                  <li>host a preparation call with the group to prepare and clarify intentions for the week</li>
-                              </ul>
-                          </li>
-                          <li> During the Research Week:
-                              <ul>
-                                  <li>lead the group on the chosen project during the working sessions which fill most of each day</li>
-                              </ul>
-                          </li>
-                          <li> Optional:
-                              <ul>
-                                  <li>select a TA</li>
-                                  <li> lead the group to publish a paper following the Research Week</li>
-                                  <li>host regular meetings with your group before the Research Week </li>
+                      <p> The Mentor for each group chooses an open research problem and leads the group during the in-person Research Week.</p>
+                      <p> <i>Expectations for Mentors:</i> Choose a project topic and 2 relevant readings. Lead the group during the 5-day Research Week. </p>
 
-                              </ul>
-                          </li>
+                        <p>Mentors may optionally:</p> 
+                        <ul>
+                            <li>select a TA</li>
+                            <li> host one or more preparation calls with the group prior to the Research week</li>
+                            <li> lead the group to publish a paper following the Research Week</li>
+                        </ul>
+                    </li>
                       </ul>
                   </div>
                     <div class="col-lg-12 past-proj">
                       <h5> For TAs </h5>
                       <p> The TA for each group guides the groups' students during the Online Seminar and assists the Mentor during the Research Week.</p>
-                      <p> Expectations for TAs:</p>
+                      <p> <i>Expectations for TAs:</i></p>
                       <ul>
                           <li> During the Online Seminar:
                               <ul>
                                   <li>schedule and moderate 30 minute group discussions on the readings every other week (8 in total)</li>
                                   <li> support the two pairs of students in developing their presentation and blog post by checking-in frequently, answering technical questions, and providing feedback </li>
                                   <li> attend the presentations given by your students</li>
-
                               </ul>
                           </li>
                           <li> During the Research Week:
@@ -164,8 +146,8 @@
                   </div>
                     <div class="col-lg-12 past-proj">
                       <h5> For Participants </h5>
-                      <p> The participants develop the skills of research during the Online Seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the Research week they work intensively on a research project under the guidance of their project’s Mentor.</p>
-                      <p> Expectations for Participants:</p>
+                      <p> The participants develop the skills of research during the Online Seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the Research Week they work intensively on a research project under the guidance of their project’s Mentor.</p>
+                      <p> <i>Expectations for Participants:</i></p>
                       <ul>
                           <li> During the Online Seminar:
                               <ul>
