add application link and letter of reference

--- a/apply.html
+++ b/apply.html
@@ -49,8 +49,18 @@
 
     <h1>Apply</h1>
 
-    <p>Applications for the 2021 Adjoint School will open in December 2020. More details will be available on this page when applications open.</p>
+    <p>Applications for the 2021 Adjoint School are now open! Apply by completing the <a href = "https://docs.google.com/forms/d/e/1FAIpQLSdGpPmsQlbNPCzCeTwHJX73t6dLn1ozfzyXiCMFaKba7O8HOQ/viewform?usp=sf_link"> application form</a>.</p>
+    <p> <b> Deadline:</b> Januar XXX 2021, 23:59 (anywhere on Earth).</p>
 
+    <h3>Information regarding the letter of reference.</h3>
+    <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
+      <ul>
+        <li> Your backgrou</li>
+        <li> The ACT School's relevance to your research or career</li>
+        <li> Your research experience</li>
+      </ul>
+     If your reference letter won't arrive by the deadline, please have it sent in as soon as possible for the best chance of it being available when decisions are made, and send us contact information for your referee.
+     </p> 
     <hr></hr>
     <div class="row">
 
