--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </div>
 
     <hr></hr>
+    <section id = "2021">
     <h2> The Adjoint School 2021</h2>
     <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind, and Brendan Fong.</p>
 
@@ -179,7 +180,7 @@
           </div>
       </div>
   </div>
-
+</section>
 
 
 
