--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
               </div>
               <hr></hr>
-
+              
               <div class="row">
 
 
@@ -107,7 +107,7 @@
 
               </div>
               <hr> </hr>
-
+              <section id = #roles>
               <h3> Role Descriptions </h3>
 
               <div class="row">
@@ -178,6 +178,7 @@
                   </div>
 
               </div>
+             </section>
 
               <hr> </hr>
               <h3> Contact Us </h3>
