--- a/apply.html
+++ b/apply.html
@@ -58,7 +58,7 @@
       <ul>
         <li> Your background</li>
         <li> The ACT School's relevance to your research or career</li>
-        <li> Your research experience</li>
+        <li> Your research or career experience</li>
       </ul>
      If your reference letter won't arrive by the deadline, please have it sent in as soon as possible for the best chance of it being available when decisions are made, and send us contact information for your referee.
      </p> 
