--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class= "col-xl-6 ">
           <div class = "past-proj">
               <center>
-                  <h5> To Be Determined </h5>
+                  <h5> To be determined </h5>
                   <p> Mentor: <i> Simona Paoli </i></p>
               </center>
               <p>
@@ -144,7 +144,7 @@
       <div class= "col-xl-6 ">
           <div class = "past-proj">
               <center>
-                  <h5> Extensions of Coalgebraic Dynamic Logic</h5>
+                  <h5> Extensions of coalgebraic dynamic logic</h5>
                   <p> Mentors: <i>Helle Hvid Hansen</i> and <i>Clemens Kupke</i></p>
               </center>
               <p>
